--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 ">Mute</button>
 
 <!-- الموسيقى تعمل تلقائياً -->
-<audio id="bgMusic" src="https://drive.google.com/uc?export=download&id=1e7OhZMCjoqI9m4NRBYJS0U2TzlB_xh9Q" autoplay loop></audio>
+<audio id="bgMusic" src="https://voca.ro/1mr27EMMabSY" autoplay loop></audio>
 
 <div id="main" class="container">
   <h1>Eternal Brothers FC</h1>
@@ -406,3 +406,4 @@ loadChat();
 
 </body>
 </html>
+
