Fix HTML encoding issues and update audio source

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 ">Mute</button>
 
 <!-- الموسيقى تعمل تلقائياً -->
-<audio id="bgMusic" src="https://voca.ro/1mr27EMMabSY" autoplay loop></audio>
+<audio id="bgMusic" src="https://www.dropbox.com/scl/fi/t3z4jgfvozwvk26fjhv22/Eternal-Brothers-FC-new.mp3?rlkey=4bea1y99z30lmeom3diqham32&st=44gj75sa&dl=0" autoplay loop></audio>
 
 <div id="main" class="container">
   <h1>Eternal Brothers FC</h1>
@@ -406,4 +406,5 @@ loadChat();
 
 </body>
 </html>
+
 
