Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 <div id="main" class="container">
   <!-- مشغل الموسيقى فوق اسم الفريق -->
   <audio id="bgMusicPlayer" controls autoplay loop style="margin-bottom:10px;">
-    <source src="https://www.dropbox.com/s/t3z4jgfvozwvk26fjhv22/Eternal-Brothers-FC-new.mp3?raw=1" type="audio/mpeg">
+    <source src="https://archive.org/details/eternal-brothers-fc-new.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
@@ -410,3 +410,4 @@ loadChat();
 
 </body>
 </html>
+
