--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ button {
   font-weight:700;
 }
 #homeBtn { background:#d32f2f; color:#fff; }
+#blueBtn { background:#1976d2; color:#fff; }
+#yellowBtn { background:#fbc02d; color:#000; }
 
 .container {
   display:none;
@@ -43,14 +45,51 @@ ul { list-style:none; padding:0; margin-top:10px; text-align:left; font-weight:b
 li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content:space-between; align-items:center; }
 #teamList li { background:#a8e6a1; color:black; }
 #waitingList li { background:#ffe0e0; color:black; }
+#blueList li { background:rgba(25,118,210,0.7); color:black; }
+#yellowList li { background:rgba(251,192,42,0.7); color:black; }
+
+.action-btn {
+  margin-left:6px;
+  border:none;
+  border-radius:5px;
+  padding:4px 8px;
+  cursor:pointer;
+  font-weight:bold;
+}
+.edit-btn { background:#4caf50; color:#fff; }
+.delete-btn { background:#e53935; color:#fff; }
 
 #chatBox { max-height:300px; overflow-y:auto; background:#2c2c2c; padding:10px; border-radius:8px; margin-bottom:10px; text-align:left; }
+
+.player-marker { width:35px; height:35px; border-radius:50%; color:#fff; display:flex; align-items:center; justify-content:center; font-size:14px; font-weight:bold; position:absolute; cursor:grab; user-select:none; }
+/* الاسم فوق الدائرة أفقي */
+.player-name {
+  position: absolute;
+  top: -18px;   /* فوق الدائرة */
+  left: 50%;    
+  transform: translateX(-50%);
+  font-size: 12px;
+  color: black; /* اللون أسود */
+  white-space: nowrap;
+  font-weight: bold;
+}
+
+.field { width:100%; max-width:400px; height:250px; background:#4CAF50; margin:10px auto; border:2px solid #fff; border-radius:10px; position:relative; touch-action:none; }
+/* خطوط الملعب */
+.field .center-circle { position:absolute; width:50px;height:50px;border-radius:50%;border:2px solid #fff; top:50%; left:50%; transform:translate(-50%,-50%); }
+.field .penalty-box-left, .field .penalty-box-right { position:absolute;width:60px;height:120px;border:2px solid #fff; top:50%; transform:translateY(-50%); }
+.field .penalty-box-left { left:0; }
+.field .penalty-box-right { right:0; }
+.field .mid-line { position:absolute; width:0;height:100%;border-left:2px solid #fff; top:0; left:50%; transform:translateX(-50%); }
+
 </style>
 </head>
 <body>
 
 <div class="nav-buttons">
+  <button id="blueBtn" onclick="showSection('blue')">Blue</button>
   <button id="homeBtn" onclick="showSection('main')">Home</button>
+  <button id="yellowBtn" onclick="showSection('yellow')">Yellow</button>
 </div>
 
 <div id="main" class="container">
@@ -73,13 +112,46 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
   <button id="sendBtn" onclick="sendMessage()" disabled>Send</button>
 </div>
 
+<div id="blue" class="container" style="background:#1565c0aa;">
+  <h2>Blue Team</h2>
+  <input type="text" id="blueInput" placeholder="Enter player name">
+  <button onclick="addBlue()">Add</button>
+  <ul id="blueList"></ul>
+  <h3>Plan</h3>
+  <div id="bluePlan" class="field">
+    <div class="mid-line"></div>
+    <div class="center-circle"></div>
+    <div class="penalty-box-left"></div>
+    <div class="penalty-box-right"></div>
+  </div>
+</div>
+
+<div id="yellow" class="container" style="background:#fdd835aa; color:#000;">
+  <h2>Yellow Team</h2>
+  <input type="text" id="yellowInput" placeholder="Enter player name">
+  <button onclick="addYellow()">Add</button>
+  <ul id="yellowList"></ul>
+  <h3>Plan</h3>
+  <div id="yellowPlan" class="field">
+    <div class="mid-line"></div>
+    <div class="center-circle"></div>
+    <div class="penalty-box-left"></div>
+    <div class="penalty-box-right"></div>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 const supabaseUrl = "https://wihhlvgkjglphjzhivdn.supabase.co";
-const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaGhsdmdramdscGhqemhpdmRuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDMwOTYsImV4cCI6MjA3ODUxOTA5Nn0.0uG2yhtSzNiGfn3f1ZjB0p33lMh75Et28aMgMGznWlQ";
-const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+
+// API Key و Project Role
+const supabaseServiceKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaGhsdmdramdscGhqemhpdmRuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDMwOTYsImV4cCI6MjA3ODUxOTA5Nn0.0uG2yhtSzNiGfn3f1ZjB0p33lMh75Et28aMgMGznWlQ";
+
+const supabase = window.supabase.createClient(supabaseUrl, supabaseServiceKey);
 
 let chatEnabled=false;
+const playerPositions = { blue: {}, yellow: {} };
+const nameColors = ["#e53935", "#1e88e5", "#fbc02d","#43a047","#8e24aa","#fb8c00","#00acc1","#d81b60","#6d4c41","#3949ab","#f4511e","#7cb342"];
 
 // Navigation
 function showSection(id){
@@ -88,28 +160,25 @@ function showSection(id){
 }
 showSection('main');
 
-// التحقق الزمني: الأربعاء 3 ظهراً إلى الأحد 12 ظهراً
-function canAddPlayer() {
+// تحقق من الوقت (من الأربعاء 3 ظهرًا حتى الأحد 12 ظهرًا)
+function isWithinAllowedTime(){
   const now = new Date();
-  const day = now.getDay(); // 0=Sun,1=Mon,...,3=Wed,...6=Sat
+  const day = now.getDay(); // 0=Sunday, 1=Monday, ..., 6=Saturday
   const hour = now.getHours();
 
-  return (
-    // الأربعاء بعد 3 ظهراً
-    (day === 3 && hour >= 15) ||
-    // الخميس الجمعة السبت كامل اليوم
-    (day >= 4 && day <= 6) ||
-    // الأحد قبل 12 ظهراً
-    (day === 0 && hour < 12)
-  );
+  if(day===3 && hour>=15) return true; // الأربعاء بعد 3 ظهرًا
+  if(day===4 || day===5 || day===6) return true; // الخميس، الجمعة، السبت
+  if(day===0 && hour<12) return true; // الأحد قبل 12 ظهرًا
+  return false;
 }
 
 // Main team
 async function addPlayer(){
-  if(!canAddPlayer()) return alert("يمكنك إضافة اللاعبين فقط من الأربعاء 3 ظهراً إلى الأحد 12 ظهراً.");
+  if(!isWithinAllowedTime()){
+    return alert("Adding players is only allowed from Wednesday 3 PM to Sunday 12 PM.");
+  }
   const name = document.getElementById("nameInput").value.trim();
   if(!name) return alert("Enter a name");
-
   const { data: team } = await supabase.from("main_team").select("id");
   if(team.length < 24){
     const { error } = await supabase.from("main_team").insert([{name,time:Date.now()}]);
@@ -130,8 +199,166 @@ async function loadPlayers(){
   const waitingList = document.getElementById("waitingList");
   teamList.innerHTML="";
   waitingList.innerHTML="";
-  if(team) team.forEach((p,i)=>teamList.innerHTML+=`<li>${i+1}. ${p.name}</li>`);
-  if(waiting) waiting.forEach((p,i)=>waitingList.innerHTML+=`<li>${i+1}. ${p.name}</li>`);
+  if(team) team.forEach((p,i)=>teamList.innerHTML+=`<li>${i+1}. ${p.name}
+    <span>
+      <button class="action-btn edit-btn" onclick="editPlayer('main_team',${p.id},'${p.name}')">✏️</button>
+      <button class="action-btn delete-btn" onclick="deletePlayer('main_team',${p.id})">🗑️</button>
+    </span></li>`);
+  if(waiting) waiting.forEach((p,i)=>waitingList.innerHTML+=`<li>${i+1}. ${p.name}
+    <span>
+      <button class="action-btn edit-btn" onclick="editPlayer('waiting_list',${p.id},'${p.name}')">✏️</button>
+      <button class="action-btn delete-btn" onclick="deletePlayer('waiting_list',${p.id})">🗑️</button>
+    </span></li>`);
+}
+
+async function refillMainTeam(){
+  const { data: team } = await supabase.from("main_team").select("id");
+  const { data: waiting } = await supabase.from("waiting_list").select("*").order("id");
+  if(team.length < 24 && waiting.length > 0){
+    const first = waiting[0];
+    await supabase.from("main_team").insert([{ name:first.name, time:Date.now() }]);
+    await supabase.from("waiting_list").delete().eq("id", first.id);
+  }
+  loadPlayers();
+}
+
+// Draggable markers
+function createPlayerMarker(team, playerName, playerIndex, storedPosition=null) {
+  const fieldId = team === 'blue' ? 'bluePlan' : 'yellowPlan';
+  const field = document.getElementById(fieldId);
+
+  const marker = document.createElement('div');
+  marker.classList.add('player-marker');
+  marker.style.background = team==='blue'? '#1976d2' : '#fbc02d';
+  marker.innerText = playerIndex;
+
+  if(storedPosition){
+    marker.style.left = storedPosition.left;
+    marker.style.top = storedPosition.top;
+  } else {
+    marker.style.left = '10px';
+    marker.style.top = `${30 + playerIndex * 30}px`;
+  }
+
+  const label = document.createElement('div');
+  label.classList.add('player-name');
+  label.innerText = playerName;
+  label.style.color = 'black';
+  marker.appendChild(label);
+
+  let isDragging=false, offsetX, offsetY;
+
+  function startDrag(e){
+    isDragging=true;
+    const rect=marker.getBoundingClientRect();
+    if(e.type.startsWith('touch')){
+      const touch=e.touches[0];
+      offsetX=touch.clientX - rect.left;
+      offsetY=touch.clientY - rect.top;
+    } else {
+      offsetX=e.offsetX;
+      offsetY=e.offsetY;
+    }
+  }
+
+  function moveDrag(e){
+    if(!isDragging) return;
+    const rect=field.getBoundingClientRect();
+    let clientX, clientY;
+    if(e.type.startsWith('touch')){
+      const touch=e.touches[0];
+      clientX=touch.clientX;
+      clientY=touch.clientY;
+    } else {
+      clientX=e.clientX;
+      clientY=e.clientY;
+    }
+    marker.style.left = `${clientX - rect.left - offsetX}px`;
+    marker.style.top = `${clientY - rect.top - offsetY}px`;
+  }
+
+  async function endDrag(){
+    if(!isDragging) return;
+    isDragging=false;
+    playerPositions[team][playerName] = { left: marker.style.left, top: marker.style.top };
+    const table = team==='blue' ? 'blue_team' : 'yellow_team';
+    const { data: player } = await supabase.from(table).select('id').eq('name',playerName).limit(1);
+    if(player.length>0){
+      await supabase.from(table).update({position:playerPositions[team][playerName]}).eq('id', player[0].id);
+    }
+  }
+
+  marker.addEventListener('mousedown', startDrag);
+  marker.addEventListener('touchstart', startDrag);
+  document.addEventListener('mousemove', moveDrag);
+  document.addEventListener('touchmove', moveDrag);
+  document.addEventListener('mouseup', endDrag);
+  document.addEventListener('touchend', endDrag);
+
+  field.appendChild(marker);
+}
+
+// Blue team
+async function addBlue(){
+  const name=document.getElementById("blueInput").value.trim();
+  if(!name) return;
+  const { data: team } = await supabase.from("blue_team").select("id");
+  if(team.length >= 12) return alert("Blue team is full (12 players).");
+  await supabase.from("blue_team").insert([{name,time:Date.now()}]);
+  document.getElementById("blueInput").value="";
+  loadBlue();
+}
+
+async function loadBlue(){
+  const { data } = await supabase.from("blue_team").select("*").order("id");
+  const ul=document.getElementById("blueList");
+  const field=document.getElementById("bluePlan");
+  ul.innerHTML=""; field.innerHTML=`<div class="mid-line"></div><div class="center-circle"></div><div class="penalty-box-left"></div><div class="penalty-box-right"></div>`;
+  if(data) data.forEach((p,i)=>{
+    ul.innerHTML+=`<li>${i+1}. ${p.name}<span><button class="action-btn edit-btn" onclick="editPlayer('blue_team',${p.id},'${p.name}')">✏️</button><button class="action-btn delete-btn" onclick="deletePlayer('blue_team',${p.id})">🗑️</button></span></li>`;
+    createPlayerMarker('blue', p.name, i+1, p.position);
+  });
+}
+
+// Yellow team
+async function addYellow(){
+  const name=document.getElementById("yellowInput").value.trim();
+  if(!name) return;
+  const { data: team } = await supabase.from("yellow_team").select("id");
+  if(team.length >= 12) return alert("Yellow team is full (12 players).");
+  await supabase.from("yellow_team").insert([{name,time:Date.now()}]);
+  document.getElementById("yellowInput").value="";
+  loadYellow();
+}
+
+async function loadYellow(){
+  const { data } = await supabase.from("yellow_team").select("*").order("id");
+  const ul=document.getElementById("yellowList");
+  const field=document.getElementById("yellowPlan");
+  ul.innerHTML=""; field.innerHTML=`<div class="mid-line"></div><div class="center-circle"></div><div class="penalty-box-left"></div><div class="penalty-box-right"></div>`;
+  if(data) data.forEach((p,i)=>{
+    ul.innerHTML+=`<li>${i+1}. ${p.name}<span><button class="action-btn edit-btn" onclick="editPlayer('yellow_team',${p.id},'${p.name}')">✏️</button><button class="action-btn delete-btn" onclick="deletePlayer('yellow_team',${p.id})">🗑️</button></span></li>`;
+    createPlayerMarker('yellow', p.name, i+1, p.position);
+  });
+}
+
+// Edit & Delete
+async function deletePlayer(table,id){
+  if(!confirm("Are you sure you want to delete this player?")) return;
+  await supabase.from(table).delete().eq("id",id);
+  if(table==="main_team") await refillMainTeam();
+  reloadList(table);
+}
+async function editPlayer(table,id,oldName){
+  const newName=prompt("Edit name:", oldName);
+  if(!newName || newName.trim()==="") return;
+  await supabase.from(table).update({name:newName.trim()}).eq("id",id);
+  reloadList(table);
+}
+function reloadList(table){
+  if(table==="main_team" || table==="waiting_list") loadPlayers();
+  else if(table==="blue_team") loadBlue();
+  else if(table==="yellow_team") loadYellow();
 }
 
 // Chat
@@ -159,8 +386,7 @@ async function loadChat(){
 }
 
 // Load all
-loadPlayers();
-loadChat();
+loadPlayers(); loadBlue(); loadYellow(); loadChat();
 </script>
 
 </body>
